--- a/style.css
+++ b/style.css
@@ -196,6 +196,8 @@ h2 {
 .skills_cards img{
     width: 100px;
     padding-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
