--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ h2 {
 }
 .skills_cards{
     background-color: #eaf4ff;
-    padding: 2%;
+    padding: 20%;
     margin: 5%;
     text-align: center;
     border-radius: 1em;
@@ -195,14 +195,9 @@ h2 {
 
 .skills_cards img{
     width: 100px;
-    padding-top: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
-h5{
+.skills_cards h5{
     font-size: 1.1em;
 }
 
