--- a/Malcolm Lismore Photography/style-home-pg.css
+++ b/Malcolm Lismore Photography/style-home-pg.css
@@ -1,4 +1,14 @@
-body{
+body {
     background-color: black;
     color: white;
+    font-family: "Josefin Sans";
+    font-weight: 400;
+    font-style: normal;
+}
+
+h1, h2 {
+    font-family: "Tangerine";
+    font-weight: 800;
+    font-style: normal;
+    font-size: 3em;
 }
