--- a/Malcolm Lismore Photography/style-home-pg.css
+++ b/Malcolm Lismore Photography/style-home-pg.css
@@ -1,14 +1,77 @@
+/*//////////////////////////////////////////////// Base Style //////////////////////////////////////////////// */
+
 body {
     background-color: black;
     color: white;
     font-family: "Josefin Sans";
     font-weight: 400;
     font-style: normal;
+    margin: 0;
 }
-
 h1, h2 {
     font-family: "Tangerine";
     font-weight: 800;
     font-style: normal;
     font-size: 3em;
+}
+
+/*//////////////////////////////////////////////// Web Page Logo //////////////////////////////////////////////// */
+.page-logo-img{
+    width: 20%;
+    display: block;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+    padding-bottom: 1em;
+}
+
+/*//////////////////////////////////////////////// Navigation Bar //////////////////////////////////////////////// */
+
+.navigation-bar {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
+}
+
+.navigation-bar-items {
+    text-decoration: none;
+    color: rgb(255, 219, 60);
+    font-size: 1.5em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    border-radius: 1em;
+}
+
+.navigation-bar-items:hover {
+    background-color: rgb(49, 46, 0);
+    text-decoration: underline;
+    color: rgb(255, 229, 112);
+    text-shadow: 1px 1px 15px rgb(253, 255, 208);
+}
+.navigation-bar-items:active {
+    margin: 1em;
+    color: rgb(255, 255, 255);
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: black;
+    padding: 2em;
+  }
+
+  /*//////////////////////////////////////////////// Page Head //////////////////////////////////////////////// */
+  .page-head {
+    background-image: url(resources/cam-lens-bg-pic.jpg);
+    background-size: cover; 
+    background-position: center; 
+    text-align: center;
+    padding: 10%;
+    font-size: 150%;
 }
