--- a/Malcolm Lismore Photography/style-home-pg.css
+++ b/Malcolm Lismore Photography/style-home-pg.css
@@ -148,11 +148,35 @@ a{
     align-items: center;
     background-color: rgb(72, 69, 43);
     border-radius: 2em;
-
 }
 .about-me-preview-area> img{
     width: 30%;
     float: left;
     border-radius: 100%;
     padding: 1em;
+}
+
+/*////////////////////////////////////////////////Packages & Prices Section  preview section //////////////////////////////////////////////// */
+
+.packages-prices-preview-cards-area{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(450px,1fr));
+    grid-gap: 20px;
+    padding: 1em;
+    align-items: center;
+    justify-content: center;
+}
+.packages-prices-card{
+    background-color: rgb(120, 118, 96);
+    border-radius: 1.5em;
+    margin: 1em;
+    padding: 1em;
+    text-align: center;
+}
+.packages-prices-card:hover{
+    background-color: rgb(165, 159, 93);
+}
+.select-package-button{
+    background-color: rgb(206, 134, 0);
+    box-shadow: 0px 0px 15px rgb(79, 78, 0);
 }
