--- a/Malcolm Lismore Photography/about-me-pg.css
+++ b/Malcolm Lismore Photography/about-me-pg.css
@@ -22,7 +22,6 @@ h3{
     font-size: 3em;
     margin: 1em;
 }
-
 p{
     font-size: 1.5em;
     margin: 1em;
@@ -58,4 +57,39 @@ a{
 .navigation-bar-items:active {
     margin: 1em;
     color: rgb(255, 255, 255);
+}
+
+/*////////////////////////////////////////////////Image //////////////////////////////////////////////// */
+
+.about-me-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 100%;
+    width: 50%;
+}
+
+/*///////////////////////////////////////////////Social Media //////////////////////////////////////////////// */
+
+.all_social_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+    transition: transform 0.3s ease;
+}
+.social_icon {
+    width: 100px;
+}
+.social_icon:hover {
+    transform: scale(1.15); 
+}
+
+/*////////////////////////////////////////////////Footer Section //////////////////////////////////////////////// */
+
+footer{
+    background-color: rgb(60, 60, 60);
+    margin-top: 5em;
+    padding: 1em;
+    text-align: center;
 }
