--- a/Malcolm Lismore Photography/gallery.css
+++ b/Malcolm Lismore Photography/gallery.css
@@ -19,6 +19,10 @@ h1{
 a{
     text-decoration: none;
 }
+p{
+    font-size: 1.5em;
+    margin: 1em;
+}
 
 /*//////////////////////////////////////////////// Navigation Bar //////////////////////////////////////////////// */
 
